Project tidy up II

--- a/docs/docs/latex/de/dcf/pss__mkid_8c.tex
+++ b/docs/docs/latex/de/dcf/pss__mkid_8c.tex
@@ -2,7 +2,7 @@
 \label{pss__mkid_8c}\index{/home/luis/Documentos/c/cursus/circle3/push\_swap/src/stack/pss\_mkid.c@{/home/luis/Documentos/c/cursus/circle3/push\_swap/src/stack/pss\_mkid.c}}
 
 
-\mbox{\hyperlink{pss__mkid_8c_ad0031241f33e5a4c6ff7023b12c62e35}{pss\+\_\+mkid()}} returns stack\textquotesingle{}s bottom-\/node\textquotesingle{}s value.  
+\mbox{\hyperlink{pss__mkid_8c_ad0031241f33e5a4c6ff7023b12c62e35}{pss\+\_\+mkid()}} makes(calculates) the future positions in a sorted stack  
 
 
 {\ttfamily \#include \char`\"{}libpss.\+h\char`\"{}}\newline
@@ -16,7 +16,7 @@ void \mbox{\hyperlink{pss__mkid_8c_ad0031241f33e5a4c6ff7023b12c62e35}{pss\+\_\+m
 
 
 \doxysubsection{Detailed Description}
-\mbox{\hyperlink{pss__mkid_8c_ad0031241f33e5a4c6ff7023b12c62e35}{pss\+\_\+mkid()}} returns stack\textquotesingle{}s bottom-\/node\textquotesingle{}s value. 
+\mbox{\hyperlink{pss__mkid_8c_ad0031241f33e5a4c6ff7023b12c62e35}{pss\+\_\+mkid()}} makes(calculates) the future positions in a sorted stack 
 
 
 \begin{DoxyParams}[1]{Parameters}
