--- a/docs/docs/latex/dir_ae05216015ae78cedcc5de6d7fdc0879.tex
+++ b/docs/docs/latex/dir_ae05216015ae78cedcc5de6d7fdc0879.tex
@@ -30,7 +30,7 @@ file \mbox{\hyperlink{pss__maxi_8c}{pss\+\_\+maxi.\+c}}
 file \mbox{\hyperlink{pss__mini_8c}{pss\+\_\+mini.\+c}}
 \item 
 file \mbox{\hyperlink{pss__mkid_8c}{pss\+\_\+mkid.\+c}}
-\begin{DoxyCompactList}\small\item\em \mbox{\hyperlink{pss__mkid_8c_ad0031241f33e5a4c6ff7023b12c62e35}{pss\+\_\+mkid()}} returns stack\textquotesingle{}s bottom-\/node\textquotesingle{}s value. \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em \mbox{\hyperlink{pss__mkid_8c_ad0031241f33e5a4c6ff7023b12c62e35}{pss\+\_\+mkid()}} makes(calculates) the future positions in a sorted stack \end{DoxyCompactList}\item 
 file \mbox{\hyperlink{pss__nrot_8c}{pss\+\_\+nrot.\+c}}
 \item 
 file \mbox{\hyperlink{pss__nrro_8c}{pss\+\_\+nrro.\+c}}
