--- a/docs/docs/latex/files.tex
+++ b/docs/docs/latex/files.tex
@@ -109,7 +109,7 @@ Here is a list of all files with brief descriptions\+:\begin{DoxyCompactList}
 \item\contentsline{section}{/home/luis/\+Documentos/c/cursus/circle3/push\+\_\+swap/src/stack/\mbox{\hyperlink{pss__mami_8c}{pss\+\_\+mami.\+c}} \\*Pss\+\_\+mami() updates min and max according the last pushed num }{\pageref{pss__mami_8c}}{}
 \item\contentsline{section}{/home/luis/\+Documentos/c/cursus/circle3/push\+\_\+swap/src/stack/\mbox{\hyperlink{pss__maxi_8c}{pss\+\_\+maxi.\+c}} }{\pageref{pss__maxi_8c}}{}
 \item\contentsline{section}{/home/luis/\+Documentos/c/cursus/circle3/push\+\_\+swap/src/stack/\mbox{\hyperlink{pss__mini_8c}{pss\+\_\+mini.\+c}} }{\pageref{pss__mini_8c}}{}
-\item\contentsline{section}{/home/luis/\+Documentos/c/cursus/circle3/push\+\_\+swap/src/stack/\mbox{\hyperlink{pss__mkid_8c}{pss\+\_\+mkid.\+c}} \\*Pss\+\_\+mkid() returns stack\textquotesingle{}s bottom-\/node\textquotesingle{}s value }{\pageref{pss__mkid_8c}}{}
+\item\contentsline{section}{/home/luis/\+Documentos/c/cursus/circle3/push\+\_\+swap/src/stack/\mbox{\hyperlink{pss__mkid_8c}{pss\+\_\+mkid.\+c}} \\*Pss\+\_\+mkid() makes(calculates) the future positions in a sorted stack }{\pageref{pss__mkid_8c}}{}
 \item\contentsline{section}{/home/luis/\+Documentos/c/cursus/circle3/push\+\_\+swap/src/stack/\mbox{\hyperlink{pss__nrot_8c}{pss\+\_\+nrot.\+c}} }{\pageref{pss__nrot_8c}}{}
 \item\contentsline{section}{/home/luis/\+Documentos/c/cursus/circle3/push\+\_\+swap/src/stack/\mbox{\hyperlink{pss__nrro_8c}{pss\+\_\+nrro.\+c}} }{\pageref{pss__nrro_8c}}{}
 \item\contentsline{section}{/home/luis/\+Documentos/c/cursus/circle3/push\+\_\+swap/src/stack/\mbox{\hyperlink{pss__ovbo_8c}{pss\+\_\+ovbo.\+c}} \\*Pss\+\_\+ovbo() returns the over-\/botton-\/node of the stack\textquotesingle{}s value }{\pageref{pss__ovbo_8c}}{}
